Optimize Handling Response for request
