# app/controllers/controller.ts
@@ -2,21 +2,32 @@ import { Controller } from "tsoa";
 import { ValidateError } from "tsoa";
 
 
+export interface IResponse {
+    code : number,
+
+    message ?: string,
+
+    data?: any
+}
+
 export class My_Controller extends Controller {
 
-    public validate (schema: any, fields:any) {
+
+    public validate (schema: any, fields:any) : boolean | object {
         
-        const validation  = schema.validate(fields, {abortEarly : false});
+        const validation  = schema.validate(fields,  { abortEarly: false });
         let errors : any = {};
         if (validation.error){
             for (const field of validation.error.details){
                 errors[field.context.key] = field.message
             }
-            throw new ValidateError(errors, "Validation error");
-
+            return errors;
+        }else {
+            return true
         }
-        return;
+        
     }
+
    
 }
 
